welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:12: error: ')' expected but 'else' found.
  else {setPos(getX(), getY() +1)}
  ^